# auto-research

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  RELEASING.md
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  installation_issue.md
.github/workflows/: lint.yml  release.yml
agents/: DISPATCH_MATRIX.md  attention-analyst.md  experiment-designer.md  paper-deep-reader.md  research-gap-finder.md  result-statistician.md
commands/: lessons-search.md  notebook-viz.md  research-design.md  research-experiment.md  research-review.md  research-start.md  research-status.md  research-write.md
examples/: README.md
examples/llm-eval-mmlu-baseline/: 01_BRIEF.md  03_GAP_ANALYSIS.md  03_IDEAS.md  04_EXPERIMENT_PLAN.md  CHANGELOG.md  STATE.json
examples/llm-eval-mmlu-baseline/02_SURVEY/: MATRIX.md  papers.jsonl
hooks/: hooks.json  post-experiment-log.sh
scripts/: cleanup_checkpoints.sh  cross_compare.sh  export_project.sh  find_cheap_gpu.sh  gzip_old_events.sh  init_state.sh  swarm_init.sh  swarm_orchestrate.sh  tinker_run.sh
skills/auto-research/: SKILL.md
skills/auto-research/references/: data_card_template.md  data_lineage.md  error_handling_spec.md  eval_protocol.md  next_steps_template.md  phase_state_machine.md  reproducibility_checklist.md  responsible_research.md
skills/research.attention.probe/: SKILL.md
skills/research.attention.probe/references/: intervention_protocols.md  transformer_lens_setup.md
skills/research.autonomous.swarm/: SKILL.md
skills/research.autonomous.swarm/references/: program_arch_explore.md  program_batch_explore.md  program_depth_explore.md  program_lr_explore.md  program_random_restart.md  strategy_adapters.md  swarm_protocol.md  swarm_strategies.md
skills/research.autonomous.tinker/: SKILL.md
skills/research.autonomous.tinker/references/: prepare_py_template.py.txt  program_md_template.md  results_log_format.md  tinker_loop.md  (+2 more)
skills/research.autonomous.tinker/references/domains/nlp-classification/: metric_spec.json  prepare.py.txt  program.md  pyproject.toml  train.py.txt
skills/research.autonomous.tinker/references/domains/rl-cartpole/: metric_spec.json  prepare.py.txt  program.md  pyproject.toml  train.py.txt
skills/research.autonomous.tinker/references/domains/tabular-classification/: metric_spec.json  prepare.py.txt  program.md  pyproject.toml  train.py.txt
skills/research.autonomous.tinker/references/domains/vision-classification/: metric_spec.json  prepare.py.txt  program.md  pyproject.toml  train.py.txt
skills/research.compute.shop/: SKILL.md
skills/research.cost.estimate/: SKILL.md
skills/research.cross.compare/: SKILL.md
skills/research.experiment.run/: SKILL.md
skills/research.experiment.scaffold/: SKILL.md
skills/research.export/: SKILL.md
skills/research.lab.notebook/: SKILL.md
skills/research.literature.matrix/: SKILL.md
skills/research.notebook.viz/: SKILL.md
skills/research.paper.draft/: SKILL.md
skills/research.paper.scaffold/: SKILL.md
skills/research.publish/: SKILL.md
templates/: research-gitignore.txt
tests/: README.md  run_all.sh  test_bash_syntax.sh  test_compute_shop.sh  test_domains_smoke.sh  test_events_schema.sh  test_hook_smoke.sh  test_init_state_idempotent.sh  test_json_manifests.sh  test_lab_notebook.sh  test_metrics_schema.sh  test_next_steps_template.sh  test_notebook_viz.sh  test_paper_scaffold.sh  test_state_schema.sh  test_strategy_adapters.sh  test_swarm_smoke.sh  test_tinker_smoke.sh  test_version_triple.sh
tests/fixtures/: events_sample.jsonl  metrics_sample.json  state_phase1_g0.json  state_phase2_g1.json  state_phase4_g3.json  state_phase8_g4_completed.json  state_phase8_published.json  state_rolled_back_phase6_to_5.json
tests/schemas/: events.schema.json  metrics.schema.json  state.schema.json
(+48 files in other folders)
