[project]
name = "tinker-nlp-classification"
version = "0.1.0"
description = "NLP classification tinker domain (20 newsgroups subset) — auto-research v0.12.0+"
requires-python = ">=3.10,<3.13"
license = "MIT"
authors = [{ name = "auto-research user" }]

dependencies = [
    "torch>=2.4",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
]

# Forbidden dependencies (would short-circuit autonomy):
#   - transformers (no pretrained text encoders / tokenizers)
#   - sentence-transformers (no pretrained embeddings)
#   - any HF model hub fetch
# The agent must work with sklearn vectorizers + their own torch model.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.ruff]
line-length = 100
target-version = "py310"
